# GStreamer-plugins-for-editing

./: .cproject  .project
.metadata/.plugins/org.eclipse.cdt.core/: Plugins for Editing.1310284901496.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: Plugins for Editing.sc
.metadata/.plugins/org.eclipse.core.resources/: .snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Plugins for Editing/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Plugins for Editing/.indexes/1b/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Plugins for Editing/.indexes/e4/: history.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2011/7/28/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
gst-addalpha/: configure.ac
gst-addalpha/src/: Makefile.am  gstaddalpha.c  gstaddalpha.h
gst-gimp-colorenhance/: configure.ac
gst-gimp-colorenhance/src/: gstgimpcolorenhance.c  gstgimpcolorenhance.h
gst-gimp-contrast-stretch/: configure.ac
gst-gimp-contrast-stretch/src/: Makefile.am  gstgimpcontraststretch.c  gstgimpcontraststretch.h
gst-gimp-despeckle/: AUTHORS  configure  configure.ac
gst-gimp-despeckle/autom4te.cache/: output.0  output.1  traces.0  traces.1
gst-gimp-despeckle/src/: Makefile.am  Makefile.in  gstgimpdespeckle.c  gstgimpdespeckle.h
gst-masked-unsharp/: configure.ac
gst-masked-unsharp/src/: Makefile.am  framearith.c  framearith.h  gstmaskedunsharp.c  gstmaskedunsharp.h
gst-sobel/: README  configure  configure.ac
gst-sobel/autom4te.cache/: output.0  output.1
gst-sobel/src/: Makefile.am  Makefile.in  gstsobel.c  gstsobel.h
